# dynamic-research-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/endpoints/: research.py
app/api/v1/schemas/: request.py
app/core/: config.py  dynamic_models.py  llm.py  scraper.py
app/scrapegraph/docloaders/: __init__.py  chromium.py
app/scrapegraph/graphs/: __init__.py  abstract_graph.py  base_graph.py  search_graph.py  smart_scraper_graph.py
app/scrapegraph/helpers/: __init__.py  default_filters.py  models_tokens.py
app/scrapegraph/nodes/: __init__.py  base_node.py  conditional_node.py  fetch_node.py  generate_answer_node.py  graph_iterator_node.py  merge_answers_node.py  parse_node.py  search_internet_node.py
app/scrapegraph/prompts/: __init__.py  generate_answer_node_prompts.py  merge_answer_node_prompts.py  search_internet_node_prompts.py
app/scrapegraph/utils/: __init__.py  cleanup_html.py  convert_to_md.py  copy.py  llm_callback_manager.py  logging.py  output_parser.py  prettify_exec_info.py  research_web.py  split_text_into_chunks.py  tokenizer.py
