[project]
name = "dynamic-research-agent"
version = "0.1.0"
description = "A dynamic research agent project"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "scrapegraphai>=0.2.0",
    "google-genai>=0.5.0",
    "python-dotenv>=1.0.0",
    "google-api-core>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
