[project]
name = "dynamic-research-agent"
version = "0.1.0"
description = "A dynamic research agent project"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "httpx>=0.28.1",
    "scrapegraphai>=1.48.0",
    "langchain-google-genai>=2.1.3",
    "langchain-core>=0.3.56",
    "python-dotenv>=1.1.0",
    "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
