[project]
name = "dynamic-research-agent"
version = "0.1.0"
description = "A dynamic research agent project"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.3",
    "langchain-core>=0.3.56",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.48.0",
    "html2text>=2024.8.25",
    "langchain-community>=0.2.20",
    "tqdm>=4.66.4",
    "tiktoken>=0.7.0",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "nest-asyncio>=1.6.0",
    "duckduckgo-search>=8.0.1",
    "semchunk>=3.2.1",
    "async-timeout>=5.0.1",
    "undetected-playwright>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
